fixed token overflow bug
tokens that go off the screen no longer create a scrolling mechanism

--- a/public/style.css
+++ b/public/style.css
@@ -274,3 +274,17 @@ body {
     border: 1px solid red;
     background: white;
 }
+
+#token-list {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#token-list > * {
+    pointer-events: all;
+}
